# GAP

./: CMakeLists.txt  README.md  build.sh  run.sh
Assets/models/: out.mesh
Assets/shaders/: BasicShader.vs
src/: main.cpp
src/objects/: protogenBack.hpp  protogenFace.hpp
src/resources/meshes/: ProtoBack.meshdat  ProtoFace.meshdat  protoFaceMesh.ms
src/resources/shaders/: BasicShader.fs  ProtoFace.fs  ProtoFace.vs
src/utility/: mesh.hpp  shader.hpp
